--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.jadira.framework</groupId>
+	<groupId>com.github.arteam</groupId>
 	<artifactId>jadira.parent</artifactId>
 	<packaging>pom</packaging>
 
