--- a/scanner/pom.xml
+++ b/scanner/pom.xml
@@ -19,14 +19,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
-		<groupId>org.jadira.framework</groupId>
+		<groupId>com.github.arteam</groupId>
 		<artifactId>jadira.parent</artifactId>
 		<version>6.0.2.GA-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>org.jadira.scanner</groupId>
+	<groupId>com.github.arteam</groupId>
 	<artifactId>scanner</artifactId>
 	<packaging>jar</packaging>
 	
@@ -36,7 +36,7 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>org.jadira.framework</groupId>
+				<groupId>com.github.arteam</groupId>
 				<artifactId>jadira.depmgmt</artifactId>
 				<type>pom</type>
 				<scope>import</scope>
