[maven-release-plugin] prepare release jadira.parent-6.0.2.GA-jdk9

--- a/quant/pom.xml
+++ b/quant/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.github.arteam</groupId>
         <artifactId>jadira.parent</artifactId>
-        <version>6.0.2.GA-SNAPSHOT</version>
+        <version>6.0.2.GA-jdk9</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
