--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 	<artifactId>jadira.parent</artifactId>
 	<packaging>pom</packaging>
 
-	<version>6.0.2.GA-SNAPSHOT</version>
+	<version>6.0.2.GA-jdk9</version>
 
 	<name>Jadira Framework Parent</name>
 	<description>Hibernate and DDD support including for Joda Time, JSR 310, Joda Money, JSR 354 and other Common Data Types</description>
@@ -94,7 +94,7 @@
 	    <connection>scm:git:git@github.com:arteam/jadira.git</connection>
 		<url>https://github.com/arteam/jadira.git</url>
 		<developerConnection>scm:git:git@github.com:arteam/jadira.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>jadira.parent-6.0.2.GA-jdk9</tag>
   	</scm>
   	
   	<distributionManagement>
