--- a/scanner/pom.xml
+++ b/scanner/pom.xml
@@ -21,7 +21,7 @@
 	<parent>
 		<groupId>com.github.arteam</groupId>
 		<artifactId>jadira.parent</artifactId>
-		<version>6.0.2.GA-SNAPSHOT</version>
+		<version>6.0.2.GA-jdk9</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
