hardcode version string for jadira.depmgmt

--- a/usertype.spi/pom.xml
+++ b/usertype.spi/pom.xml
@@ -41,7 +41,7 @@
 				<artifactId>jadira.depmgmt</artifactId>
 				<type>pom</type>
 				<scope>import</scope>
-				<version>${project.version}</version>
+				<version>5.0.0.GA</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
